# heroicons

./: Cargo.toml  LICENSE.md  README.md  deny.toml  package-lock.json  package.json
.github/workflows/: release.yml
book/: book.toml
book-examples/dioxus/: Cargo.toml
book-examples/dioxus/src/: icons.rs
book-examples/leptos/: Cargo.toml
book-examples/leptos/src/: icons.rs
book-examples/yew/: Cargo.toml
book-examples/yew/src/: icons.rs
book/src/: introduction.md
book/src/frameworks/: dioxus.md  leptos.md  yew.md
scripts/: Cargo.toml
scripts/src/frameworks/: dioxus.rs  leptos.rs  yew.rs
